* Note: Units which are not tracked via name, but are found to be required for an encounter will need to be added to the template.

Infernal Dawn
* Rusila Dreadblade
** New: Added stop methods for Fist and Chains timers at the start of the final phase.
* Maelforge - Ember Eggs
** Change: This encounter will now flag a victory after 3 Ember Eggs have been destroyed, not via say/notify messages.
** Change: Final Phase will now only Trigger after all Cannons have been destroyed.
* Maelforge - Final
** New: Add Tank-Swap for Melt Armor.
** New: Timer Added for First Hellfire in the Cannon phase.
** Change: Hellfire Alerts are now flagged as Important.
** Fixed: Cannons now have an internal CastBar for associated Molten Blast alerts.

Normal Dungeons
* Exodus of the Storm Queen
** New: Added Template for Chekaroth
** New: Added Template for Dominax
** New: Added Template for General Grim
** New: Added Template for Valthundr

Instances Converted to New Unit system.
* Drowned Halls
** All Bosses
* Rise of the Pheonix
** High Priest Arakhurn P1/P2

Translations
* French
** New: Additions to Maelforge and various other encounters/menus.
** Fixed: Adjusted Phase 2 transition trigger to include escape code (%) for hyphen.
* German
** New: Updates to Twyl and Rusila.
* Taiwanese
** New: Added Dictionary support.
* Chinese
** New: Added Dictionary support.

----
v1.3.2

LibSBuff
* Change: Full Buff list calls on units changing to Availability. Full are now forced in to a post cache mode.
* Change: BuffUpdate no longer calls BuffAdd for full Buff lists. This Method will now queue the entire Buff list for processing.
* Fixed: Corrected BuffUpdate not checking against the correct active Buff Cache.
* Fixed: Corrected BuffClear not checking against the correct active Buff Cache.

Ready Check Available Tracking
* New: Added Razor Edge.

RezMaster
* Fixed: Scaling Rez Master with active timers should no longer throw errors.

Tank-Swap